--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -75,10 +75,15 @@ jobs:
           dotnet restore
           dotnet build --configuration '${{ env.BUILD_CONFIGURATION }}'
           dotnet pack -c '${{ env.BUILD_CONFIGURATION }}'
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.AZURE_ARTIFACTS_PAT }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
+      
           
       # Publish the package to Azure Artifacts
       - name: 'dotnet publish'
         run: dotnet nuget push --api-key AzureArtifacts bin/Release/*.nupkg
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.AZURE_ARTIFACTS_PAT }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
 
   gpr-build-and-deploy:
     needs: build
