--- a/nuget.config
+++ b/nuget.config
@@ -4,5 +4,7 @@
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
+    <add key="github" value="https://nuget.pkg.github.com/chrisreddington/index.json" />
+    <add key="AzureArtifacts" value="https://pkgs.dev.azure.com/theatreers/_packaging/theatreers.Artifacts/nuget/v3/index.json" />
   </packageSources>
 </configuration>
