--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -75,16 +75,11 @@ jobs:
           dotnet restore
           dotnet build --configuration '${{ env.BUILD_CONFIGURATION }}'
           dotnet pack -c '${{ env.BUILD_CONFIGURATION }}'
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.AZURE_ARTIFACTS_PAT }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
-      
           
       # Publish the package to Azure Artifacts
       - name: 'dotnet publish'
         run: dotnet nuget push --api-key AzureArtifacts bin/Release/*.nupkg
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.AZURE_ARTIFACTS_PAT }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
-
+        
   gpr-build-and-deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -110,6 +105,6 @@ jobs:
           
       # Publish the package to GitHub Package Registry
       - name: 'dotnet publish'
-        run: dotnet nuget push bin/Release/*.nupkg
+        run: dotnet nuget push --api-key github bin/Release/*.nupkg
 
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
