--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -94,7 +94,7 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
           source-url: ${{ env.GITHUB_PACKAGE_REGISTRY_URL }}
         env:
-          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
+          NUGET_AUTH_TOKEN: ${{ secrets.GH_TOKEN }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
       
       # Run dotnet build and package
       - name: dotnet build and publish
@@ -103,14 +103,14 @@ jobs:
           dotnet build --configuration '${{ env.BUILD_CONFIGURATION }}'
           dotnet pack -c '${{ env.BUILD_CONFIGURATION }}'
         env:
-          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
+          NUGET_AUTH_TOKEN: ${{ secrets.GH_TOKEN }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
       
           
       # Publish the package to GitHub Package Registry
       - name: 'dotnet publish'
         run: dotnet nuget push --api-key github bin/Release/*.nupkg
         env:
-          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
+          NUGET_AUTH_TOKEN: ${{ secrets.GH_TOKEN }} # Setup the .NET Core SDK with the appropriate auth token to access the GitHub Package Registry
       
 
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
